--- a/index.html
+++ b/index.html
@@ -96,22 +96,27 @@
         <h2>关键帧展示</h2>
         <div class="keyframes-container">
             <div class="keyframe">
-                <img src="frame1.jpg" alt="第一帧">
+                <img src="00.png" alt="第一帧">
                 <h3>战船破浪入敌境，红袍武士立船头</h3>
                 <p>潮起东海万里涌，铁甲战舟破浪行。 旌旗猎猎风中舞，丹袍傲立向天问。 千帆过尽终须战，一将当关气吞虹。</p>
             </div>
-            <div class="keyframe">
-                <img src="frame2.jpg" alt="第二帧">
+             <div class="keyframe">
+                <img src="11.png" alt="第二帧">
                 <h3>火光冲天焚战舟，烈焰映照波涛红</h3>
                 <p>烈焰冲霄映苍穹，战舟化作照夜红。 烽火漫卷东海岸，熊熊战意焚波涛。 金戈铁马今何在，但见火光吞战篷。</p>
             </div>
             <div class="keyframe">
-                <img src="frame3.jpg" alt="第三帧">
-                <h3>双剑在握志已决，锦绣战袍随风舞</h3>
-                <p>双剑出鞘星光寒，锦袍猎猎舞云端。 千载壮志今朝决，万里征程此处看。 风起云涌惊天地，剑气纵横破未寒。</p>
+                <img src="22.png" alt="第三帧">
+                <h3>铜釜旧主映朝阳，战斧扬起破天光。</h3>
+                <p>铜釜旧主映朝阳，战斧扬起破天光。金粟四散惊风起，碎痕蔓延铜釜凉。粮尽釜毁今日决，此去征途是战场。</p>
             </div>
             <div class="keyframe">
-                <img src="frame4.jpg" alt="第四帧">
+                <img src="33.png" alt="第四帧">
+                <h3>战舟倾覆入江深，烈火滔天映水襟。</h3>
+                <p>战舟倾覆入江深，烈火滔天映水襟。千帆齐沉波涛怒，万丈豪情化作心。铁锚断处惊涛起，唯见长江吞战魂。</p>
+            </div>
+            <div class="keyframe">
+                <img src="44.png" alt="第五帧">
                 <h3>今日方知破釜意，不胜何以见故乡</h3>
                 <p>破釜沉舟今始悟，英雄何惧路茫茫。 誓将热血浇敌胆，方显男儿本色狂。 不破楚营誓不还，千秋壮志震苍苍。</p>
             </div>
@@ -120,15 +125,15 @@
         <h2>生成视频</h2>
         <div class="video-container">
             <video controls>
-                <source src="video.mp4" type="video/mp4">
+                <source src="1234.mp4" type="video/mp4">
             </video>
         </div>
 
         <div class="audio-section">
             <h3>配乐信息</h3>
-            <p>背景音乐：《战鼓铮鸣》- 史诗配乐</p>
+            <p>背景音乐：daydream-</p>
             <audio controls>
-                <source src="background.mp3" type="audio/mpeg">
+                <source src="123.mp3" type="audio/mpeg">
             </audio>
         </div>
 
