--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <h2>生成视频</h2>
         <div class="video-container">
             <video controls>
-                <source src="1234.mp4" type="video/mp4">
+                <source src="afcc7afa9556bc0eeed7635d497ffff9.mp4" type="video/mp4">
             </video>
         </div>
 
